--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="calculator">
-      <input class="screen" type="text">
+      <input class="input" type="text">
       <div class="keypad">
         <div class="container-k1">
           <div class="key operator">+</div>
